--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.6.0",
+        "alpinejs": "^2.8.0",
         "bootstrap": "^5.0.0-beta1"
     }
 }
